# src

./: .gitignore  Eigen_Matlab_ref.cpp  LICENSE  README.md  ekf_node.cpp  ekf_node_final.cpp  ekf_output.txt  ekf_output_beck.txt  eul2rotm.m
ekf/: CMakeLists.txt  ekf_node_Beck.cpp
ekf/launch/: 25000709.launch
ekf/matlab/: ELEC6910P_Project2Phase2.m  fAtUt_beck.txt
ekf/src/: ekf_node.cpp  ekf_node_beck.cpp  ekf_node_beck.cpp~  ekf_node_chongzi.cpp  ekf_node_chongzi.cpp~  ekf_node_chongzi2.h  ekf_node_chongzi2.h~
ekf/src_old/: ekf.cpp  ekf.h  ekf_node.cpp  ekf_node_2016_12_8.cpp  ekf_node_beck.cpp
ekf/src_recon/: ekf.cpp  ekf.h  ekf_node.cpp  pose.cpp  pose.h
ekf/src_ta/: ekf.cpp  ekf.h  pose.h
ekf/src_working/: ekf_node_10.cpp  ekf_node_new_v.cpp
ekf_from_TA/: CMakeLists.txt
ekf_from_TA/launch/: bag_tag.launch  bag_tag2.launch
ekf_from_TA/src/: ekf_node.cpp
ekf_others/src/: ekf_node.cpp  ekf_node_beck.cpp
learning_tf/: CMakeLists.txt  CMakeLists.txt~  package.xml
learning_tf/launch/: start_demo.launch  start_demo.launch~
learning_tf/src/: frame_tf_broadcaster.cpp  frame_tf_broadcaster.cpp~  turtle_tf_broadcaster.cpp  turtle_tf_broadcaster.cpp~  turtle_tf_listener.cpp  (+1 more)
proj1phase1/: test_trajectory.m
proj1phase2/: A.mat  Ax_reference.mat  Q.mat  controller.m  d.mat  test_trajectory.m  trajectory_generator.m  trajectory_generator_constrainted_QP.m  trajectory_generator_multi_segment.m  trajectory_generator_reference.m
your_code/: autopilot.launch  autopilot.launch_copy  control_function.h  hover_so3_lite.launch  trajectory.h
(+67 files in other folders)
